# dalhalla-iot

./: .gitignore  CMakeLists.txt  README.md  REGO600 additional known system registers.txt  SChemaBool.objdump.txt  allSizes.txt  diagram.json  objdump.txt  octet-stream  partitions_64mbit.csv  platformio.ini  ram_sections.txt  sdkconfig.waveshare_esp32c6_zero  sizes.txt  wokwi.toml
InitialCfgGui/: README.md  index.html
JsonExamples/: DevicesManager_cfg.json  calendarEvents_template.json  tx433 proposed json structure2.json
benchmarking_tests/: Load_two_script_files_using_newline_normalization.txt  Load_two_script_files_using_readBytes_direct_to_buffer.txt
html/: downloadAll.html  downloadAllMinimized.html  schema-editor.html  serverjs_README.txt
html/api_cli/: cmd_autocomplete_slash_delimited.html  cmd_autocomplete_slash_delimited_no_json.html  cmd_autocomplete_slash_delimited_no_json.html.gz.b64  index.html
html/cfgeditor/: examplecfg.js  index.html  main.js  main_old.js  schema.js
html/using general modal for wifi config/: modal.css  modal.js  wifi-modal.js
html/ws_api/: index.html
html/ws_cli_api/: index.html
otherThoughts/: 8-bit bus device for advanced PLC-like systems.txt  HASS auto retreival of device capabilities.txt  _VerifyJSON_const.code-search.txt  device cfg loading.txt  rego600 registers.txt
pc_simulation/: CMakeLists.txt  commandLoop.cpp  commandLoop.h  debug.txt  main.cpp  main_pc.cpp  makefile  openCmdPrompts.bat  test_mqtt.cpp  test_mqtt.h
pc_simulation/hal/: cfg.json
pc_simulation/ports/DALHAL_WebSocketAPI/: DALHAL_WebSocketAPI_Windows.cpp  DALHAL_WebSocketAPI_Windows.h
pc_simulation/ports/DALHAL_WebSocketAPI/files/: CMakeLists.txt  DALHAL_WebSocketAPI_Simple_HeaderOnly.h  DALHAL_WebSocketAPI_Windows.cpp  DALHAL_WebSocketAPI_Windows.h  QUICKSTART.md  README.md  WebSocket_Console.html  WebSocket_Example_Windows.cpp
pc_simulation/ports/HAL_JSON_REST/: HAL_JSON_REST.cpp  HAL_JSON_REST.h
pc_simulation/ports/HTTPClient/: HTTPClient.cpp  HTTPClient.h
pc_simulation/ports/IPAddress/: IPAddress.cpp  IPAddress.h
pc_simulation/ports/LittleFS/: LittleFS.cpp  LittleFS.h  LittleFS_ext.cpp  LittleFS_ext.h
pc_simulation/ports/PgmSpace/: pgmspace.h
pc_simulation/ports/PubSubClient/: PubSubClient.cpp  PubSubClient.h
pc_simulation/ports/Ticker/: Ticker.cpp  Ticker.h
pc_simulation/ports/WiFi/: WiFi.cpp  WiFi.h
pc_simulation/ports/WiFiClient/: Client.h  WiFiClient.cpp  WiFiClient.h
pc_simulation/scripts/: list.txt  script1.txt  script1.txt_ParsedTokens.txt  script1.txt_RawTokens.txt  script2.txt  script2.txt_ParsedTokens.txt  script2.txt_RawTokens.txt  scriptWithStrings.txt
pc_simulation/stubs/: Stream_WIN.h
pc_simulation/stubs/Adafruit_SSD1306/: Adafruit_SSD1306.cpp  Adafruit_SSD1306.h
pc_simulation/stubs/Arduino/: Arduino.cpp  Arduino.h
pc_simulation/stubs/DHTesp/: DHTesp.cpp  DHTesp.h
pc_simulation/stubs/DallasTemperature/: DallasTemperature.cpp  DallasTemperature.h
pc_simulation/stubs/ESP-IDF/: gpio_types.h  ledc_types.h
pc_simulation/stubs/HAL_JSON_REST/: HAL_JSON_REST.h
pc_simulation/stubs/HTTPClient/: HTTPClient.cpp  HTTPClient.h
pc_simulation/stubs/LittleFS/: LittleFS.cpp  LittleFS.h  LittleFS_ext.cpp  LittleFS_ext.h
pc_simulation/stubs/OneWire/: OneWire.cpp  OneWire.h
pc_simulation/stubs/PrintStream/: Print.cpp  Print.h  Stream.cpp  Stream.h
pc_simulation/stubs/Ticker/: Ticker.cpp  Ticker.h
pc_simulation/stubs/WS2812FX/: WS2812FX.cpp  WS2812FX.h
pc_simulation/stubs/WString/: WString.cpp  WString.h
pc_simulation/stubs/WiFiClient/: WiFiClient.cpp  WiFiClient.h
pc_simulation/stubs/Wire/: Wire.cpp  Wire.h
pc_simulation/uniform_http_ws_interface/uniform/: 00_START_HERE.md  ARCHITECTURE_GUIDE.md  CMakeLists_CrossPlatform.txt  CrossPlatform_Example.cpp  CrossPlatform_Example.cpp.example  FILE_MANIFEST.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  IWebServer.h  MIGRATION_GUIDE.md  PACKAGE_SUMMARY.md  QUICK_REFERENCE.md  WebServerImpl_ESP.h  WebServerImpl_Windows.cpp  WebServerImpl_Windows.h
scriptExamples/: test1.txt
src/: BUILD_INFO.h  files.txt  main.cpp  main.h
src/DALHAL/: DALHAL.cpp  DALHAL.h  TODO.txt  flashusage_history.txt
src/Drivers/: HearbeatLed.h  HeartbeatLed.cpp  REGO600.cpp  REGO600.h  RF433.cpp  RF433.h  UART2websocket.cpp  UART2websocket.h
src/HAL_JSON/: HAL_JSON.cpp  HAL_JSON.h  HAL_JSON_ArduinoJSON_ext.cpp  HAL_JSON_ArduinoJSON_ext.h  HAL_JSON_CachedDeviceAccess.cpp  HAL_JSON_CachedDeviceAccess.h  HAL_JSON_CachedDeviceRead.cpp  HAL_JSON_CachedDeviceRead.h  HAL_JSON_CachedDeviceRead2.cpp  HAL_JSON_CachedDeviceRead2.h  HAL_JSON_CommandExecutor.cpp  HAL_JSON_CommandExecutor.h  HAL_JSON_Device.cpp  HAL_JSON_Device.h  HAL_JSON_DeviceTypesRegistry.cpp  HAL_JSON_DeviceTypesRegistry.h  HAL_JSON_Device_GlobalDefines.h  HAL_JSON_GPIO_Manager.cpp  HAL_JSON_GPIO_Manager.h  HAL_JSON_I2C_BUS_cmds.txt  HAL_JSON_Manager.cpp  HAL_JSON_Manager.h  HAL_JSON_Operations.cpp  HAL_JSON_Operations.h  HAL_JSON_REST.cpp  HAL_JSON_REST.h  HAL_JSON_SimpleEventDevice.cpp  HAL_JSON_SimpleEventDevice.h  HAL_JSON_UID.cpp  HAL_JSON_UID.h  HAL_JSON_UID_Path.cpp  HAL_JSON_UID_Path.h  HAL_JSON_Value.cpp  HAL_JSON_Value.h  HAL_JSON_WebSocketAPI.cpp  HAL_JSON_WebSocketAPI.h  HAL_JSON_ZeroCopyString.cpp  HAL_JSON_ZeroCopyString.h  TODO.txt
src/Scheduler/: Scheduler.cpp  Scheduler.h
src/Services/: AWS_IOT.h.old  ThingSpeak.h
src/Support/: CharArrayHelpers.cpp  CharArrayHelpers.h  ConstantStrings.cpp  ConstantStrings.h  ConvertHelper.cpp  ConvertHelper.h  Info.cpp  Info.h  LittleFS_ext.cpp  LittleFS_ext.h  Logger.cpp  Logger.h  MeasureTime.h  NTP.cpp  (+8 more)
(+1060 files in other folders)
